<resources>
    <string name="app_name">TMDB</string>
    <string name="text_more">More</string>
    <string name="title_card">Card Title</string>

    <!-- Activity Labels -->
    <string name="label_activity_movies_view_all">MoviesViewAllActivity</string>
    <string name="label_activity_tv_shows_view_all">TVShowsViewAllActivity</string>
    <string name="label_activity_movie_details">MovieDetailsActivity</string>
    <string name="label_activity_tv_show_details">TVShowDetailsActivity</string>
    <string name="label_activity_person_details">PersonDetailsActivity</string>
    <string name="label_activity_search">SearchActivity</string>

    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="person">Person</string>

    <!-- Error No Data -->
    <string name="no_data_available">(No data available)</string>
    <string name="no_network_connection">No internet connection!</string>
    <string name="no_title_available">No Title Available</string>

    <string name="network_connected">Internet connected \u2713</string>

    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Movie Database</string>
    <string name="nav_header_subtitle">https://www.themoviedb.org</string>
    <string name="nav_header_desc">Navigation header desc</string>

    <!-- Content description strings-->
    <string name="iv_backdrop_desc">Image view backdrop desc</string>
    <string name="iv_poster_desc">Image view poster desc</string>
    <string name="iv_thumbnail_desc">Image view thumbnail desc</string>
    <string name="image_button_play_desc">Image button play Desc</string>
    <string name="cast_poster_desc">Cast poster desc</string>
    <string name="image_view_author_desc">Image view author desc</string>
    <string name="image_view_logo_desc">Image view logo desc</string>

    <!-- Menus -->
    <string name="menu_home">Home</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_tv_shows">TV Shows</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_about">About</string>

    <!-- Actions -->
    <string name="action_search">Search</string>
    <string name="search_hints">Search Movies, TV Shows, People</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_remove_from_favorites">Delete from favorites</string>
    <string name="added_to_favorites">Added to favorites successfully!</string>
    <string name="removed_from_favorites">Removed from favorites successfully!</string>

    <!-- Movies -->
    <string name="movies_now_playing">Movies Now Playing</string>
    <string name="movies_popular">Movies Popular</string>
    <string name="movies_upcoming">Movies Upcoming</string>
    <string name="movies_top_rated">Movies Top Rated</string>

    <!-- TV Shows -->
    <string name="tv_shows_on_the_air">TV Shows On The Air</string>
    <string name="tv_shows_popular">TV Shows Popular</string>
    <string name="tv_shows_airing_today">TV Shows Airing Today</string>
    <string name="tv_shows_top_rated">TV Shows Top Rated</string>

    <!-- Movie Details Activity -->
    <string name="director_label">Director:</string>
    <string name="director_name">Director Name</string>
    <string name="release_date_label">Release:</string>
    <string name="release_date">June 1, 2019</string>
    <string name="runtime_label">Runtime:</string>
    <string name="runtime">2 hr 30 mins</string>
    <string name="budget_label">Budget:</string>
    <string name="budget">$200,000,000</string>
    <string name="revenue_label">Revenue:</string>
    <string name="revenue">$1,000,0000,0000</string>
    <string name="movies_similar_section_label">Similar Movies</string>

    <!-- TV Show Details Activity -->
    <string name="creator_label">Creator:</string>
    <string name="creator_name">Creator Name</string>
    <string name="first_air_date_label">Release:</string>
    <string name="first_air_date">June 3, 2019</string>
    <string name="episode_runtime_label">Runtime:</string>
    <string name="episode_runtime">1 hr 15 mins</string>
    <string name="network_label">Network:</string>
    <string name="network">HBO</string>
    <string name="next_episode_label">Next Episode:</string>
    <string name="next_episode">June 10, 2019</string>
    <string name="tv_shows_similar_section_title">Similar TV Shows</string>

    <!-- Person details -->
    <string name="person_name">Person Name</string>
    <string name="person_age_label">Age:</string>
    <string name="person_age">24</string>
    <string name="birth_date_label">Born:</string>
    <string name="birth_date">July 4, 1999</string>
    <string name="birth_place_label">From:</string>
    <string name="birth_place">Queens, New York, USA</string>
    <string name="known_for_label">Known For:</string>
    <string name="known_for">Known For</string>
    <string name="biography_label">Biography</string>
    <string name="biography_content">John was born on…</string>
    <string name="movies_cast_in">Movies Cast In</string>
    <string name="tv_shows_cast_in">TV Shows Cast In</string>

    <!-- Common details -->
    <string name="rating_label">Rating:</string>
    <string name="rating">4.5/10</string>
    <string name="genres_label">Genres:</string>
    <string name="genres">Action \u00b7 Sci-Fi \u00b7 Fantasy</string>

    <string name="title">Title</string>

    <!-- Overview section -->
    <string name="overview_section_label">Overview</string>
    <string name="overview_section_content">Once upon of time!</string>

    <!-- Reviews section -->
    <string name="reviews_section_label">Reviews</string>
    <string name="reviews_author_name">Author Name</string>
    <string name="reviews_content">This is awesome!</string>

    <!-- Videos section-->
    <string name="videos_section_label">Videos</string>
    <string name="video_title">Video Title</string>

    <!-- Cast section -->
    <string name="cast_name">Cast Name</string>
    <string name="cast_as">Cast Character</string>
    <string name="cast_section_label">Casts</string>
    <string name="as">as</string>

    <!-- Search -->
    <string name="media_type_search">Media Type</string>

    <!-- About -->
    <string name="disclaimer">This is not the official TMDb android app. This app uses The Movie
        Database services but it is not endorsed or certified by it.</string>

    <string name="tmdb_about">The Movie Database (TMDb) is a community built movie and TV database.
        Every piece of data has been added by the amazing community dating back to 2008.
        For more information follow the link below:</string>

    <string name="tmdb_about_link">https://www.themoviedb.org/about</string>


</resources>
