<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_menu_movie"
            android:title="@string/menu_movies" />
        <item
            android:id="@+id/nav_tv_shows"
            android:icon="@drawable/ic_menu_tv"
            android:title="@string/menu_tv_shows" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/menu_favorites" />
    </group>

    <item android:title="@string/menu_help_feedback">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/menu_help_feedback" />
        </menu>
    </item>

</menu>
