<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout_item_reviews"
    android:layout_marginStart="16dp"
    android:layout_width="256dp"
    android:layout_height="144dp">

    <ImageView
        android:id="@+id/image_view_author_profile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/image_view_author_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/text_view_author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/reviews_author_name"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_author_profile"
        app:layout_constraintStart_toEndOf="@+id/image_view_author_profile"
        app:layout_constraintTop_toTopOf="@+id/image_view_author_profile" />

    <TextView
        android:id="@+id/text_view_review_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="6"
        android:text="@string/reviews_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_author_profile" />

</android.support.constraint.ConstraintLayout>