<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_result"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_poster"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:clickable="true"
                android:elevation="100dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="@dimen/x_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_view_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/iv_poster_desc"
                    app:srcCompat="@drawable/ic_film" />

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/text_view_name_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/title"
                android:textSize="@dimen/text_size_title"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintStart_toEndOf="@+id/card_view_poster"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_media_type_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/media_type_search"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintStart_toEndOf="@+id/card_view_poster"
                app:layout_constraintTop_toBottomOf="@+id/text_view_name_search" />

            <TextView
                android:id="@+id/text_view_overview_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/overview_section_content"
                android:textSize="@dimen/text_size_small"
                android:ellipsize="end"
                android:maxLines="4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/card_view_poster"
                app:layout_constraintTop_toBottomOf="@+id/text_view_media_type_search" />

            <TextView
                android:id="@+id/text_view_release_date_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/release_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>