<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout_item_video"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:clickable="true"
    android:focusable="true">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_video"
        android:layout_width="240dp"
        android:layout_height="135dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_view_video_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/iv_thumbnail_desc"
            app:srcCompat="@drawable/ic_film" />

    </android.support.v7.widget.CardView>

    <ImageButton
        android:id="@+id/image_button_video_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/image_button_play_desc"
        android:translationZ="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/card_view_video"
        app:layout_constraintEnd_toEndOf="@+id/card_view_video"
        app:layout_constraintStart_toStartOf="@+id/card_view_video"
        app:layout_constraintTop_toTopOf="@+id/card_view_video"
        app:srcCompat="@drawable/ic_play_circle_outline" />

    <TextView
        android:id="@+id/text_view_video_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/video_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_video" />

</android.support.constraint.ConstraintLayout>